feat: add routes for external API requests and operation logs, add sessionId property
