# controllers/apiUsagePricing.js
@@ -7,6 +7,8 @@ const {
 const API_Usage = require("../models/API_Usage.js")
 const billingSumUsage = require("../utils/billingSumUsage.js")
 const moment = require('moment')
+const API_Call = require("../models/API_Call.js")
+const API_Operation = require("../models/API_Operation.js")
 
 const setApiPricing = async (req, res) => {
 
@@ -18,74 +20,67 @@ const setApiPricing = async (req, res) => {
         'billingBy',
         'billingUnit'])
 
-    const apiPricing = await API_Pricing.create({
-        provider: provider.trim().toLowerCase(),
-        product: product.trim().toLowerCase(),
+    const normalizedProvider = provider.trim().toLowerCase()
+    const normalizedProduct = product.trim().toLowerCase()
+
+    const filter = { provider: normalizedProvider, product: normalizedProduct }
+    const update = {
+        provider: normalizedProvider,
+        product: normalizedProduct,
         currency,
         price,
         billingBy,
         billingUnit,
         type
-    })
+    }
+    const options = { new: true, upsert: true }
+
+    const apiPricing = await API_Pricing.findOneAndUpdate(filter, update, options)
 
     res.status(StatusCodes.OK).json({ apiPricing })
 }
 
 const registerUsage = async (req, res) => {
-    const { 
+    const {
         provider,
         product,
         usage,
-        callerId, 
+        callerId,
+        sessionId,
         companyId,
         quantityOfOperationAttempts,
-        chosenOperation,
-        requestLogsOpenAI,
-        responseErrorLogsOpenAI,
-        quantityOfCallsToFalconFlowAPI,
-        requestLogsFalconFlowAPI,
-        responseErrorLogsFalconFlowAPI,
+
     } = req.body
 
     mustContainProperties(req, [
         'companyId',
         'callerId',
+        'sessionId',
         'quantityOfOperationAttempts',
-        'chosenOperation',
-        'requestLogsOpenAI',
-        // 'responseErrorLogsOpenAI',
-        'quantityOfCallsToFalconFlowAPI',
-        'requestLogsFalconFlowAPI',
-        // 'responseErrorLogsFalconFlowAPI',
         'provider',
         'product',
         'usage',
-    ])  
+    ])
 
     const apiPricing = await API_Pricing.findOne({
         provider: provider.trim().toLowerCase(),
         product: product.trim().toLowerCase(),
     })
-  
-    if (apiPricing) {  
 
-        const { price, billingBy, billingUnit } = apiPricing  
+    if (apiPricing) {
+
+        const { price, billingBy, billingUnit } = apiPricing
 
         const apiUsage = await API_Usage.create({
             provider: provider.trim().toLowerCase(),
-            product: product.trim().toLowerCase(), 
-            callerId, 
+            product: product.trim().toLowerCase(),
+            callerId,
+            sessionId,
             quantityOfOperationAttempts,
-            chosenOperation,
-            requestLogsOpenAI,
-            responseErrorLogsOpenAI,
-            quantityOfCallsToFalconFlowAPI,
-            requestLogsFalconFlowAPI,
-            responseErrorLogsFalconFlowAPI,  
             usage,
             price,
             billingBy,
-            billingUnit, 
+            billingUnit,
             companyId,
             total_cost: calculateApiUsage(price, billingUnit, usage, billingBy)
         })
@@ -96,6 +91,62 @@ const registerUsage = async (req, res) => {
 
     res.status(StatusCodes.NOT_FOUND).json({ msg: `Price not found for ${product} in the API Pricing table` })
 
+}
+
+const registerAPICall = async (req, res) => {
+    const {
+        callerId,
+        companyId,
+        sessionId,
+        type,
+        requestLogs,
+        responseError,
+        quantityOfAPICall
+    } = req.body
+
+    mustContainProperties(req, [
+        'companyId',
+        'callerId',
+        'sessionId'
+    ])
+
+
+    const apiCall = await API_Call.create({
+        callerId,
+        companyId,
+        sessionId,
+        type,
+        requestLogs,
+        responseError,
+        quantityOfAPICall
+    })
+
+    res.status(StatusCodes.OK).json({ apiCall })
+}
+
+const registerOperation = async (req, res) => {
+    const {
+        callerId,
+        companyId,
+        sessionId,
+        operation,
+    } = req.body
+
+    mustContainProperties(req, [
+        'companyId',
+        'callerId',
+        'sessionId',
+        'operation'
+    ])
+
+    const apiOperation = await API_Operation.create({
+        callerId,
+        companyId,
+        sessionId,
+        operation
+    })
+
+    res.status(StatusCodes.OK).json({ apiOperation })
 }
 
 const getUsage = async (req, res) => {
@@ -124,5 +175,7 @@ const getUsage = async (req, res) => {
 module.exports = {
     setApiPricing,
     registerUsage,
+    registerAPICall,
+    registerOperation,
     getUsage
 }
